# chess-irl

./: CMakeLists.txt
src/: main.cpp
src/chess-game/: ChessGame.cpp  ChessGame.hpp  game-rules.txt
src/chess-game/renderer/: ChessRenderer.cpp  ChessRenderer.hpp
src/core/: App.cpp  App.hpp
src/dashboard/: Dashboard.cpp  Dashboard.hpp
tests/: ChessGameTests.cpp
